# npbopt

./: pyproject.toml
src/: main.py
src/opt/: record.py  solve.py
