[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "npbopt"
authors = [""]
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11.9,<3.12"
streamlit = "^1.37.1"
mip = "^1.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
mypy = "^1.11.1"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F401",
    "F402",
    "F403",
    "F404",
    "F405",
    "F406",
    "F407",
    "F541",
    "F601",
    "F602",
    "F621",
    "F622",
    "F631",
    "F632",
    "F633",
    "F634",
    "F701",
    "F702",
    "F704",
    "F706",
    "F707",
    "F722",
    "F821",
    "F822",
    "F823",
    "F841",
    "F901",
    "I",
]

[tool.mypy]
python_version = 3.11
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
strict = true
